{
  "login": {
    "username": "Username",
    "password": "Password",
    "signin": "Sign in"
  },
  "validation": {
    "required": "Required",
    "invalidFormat": "Invalid format"
  },
  "errors": {
    "errorOccured": "Something went wrong"
  },
  "noData": "No data",
  "back": "Back",
  "selectDate": "Select date",
  "profile": {
    "editProfile": "Edit profile",
    "colors": "App theme",
    "chooseColors": "Choose app theme",
    "logout": "Log out",
    "title": "User profile",
    "firstName": "First name",
    "lastName": "Last name",
    "email": "Email"
  },
  "close": "close",
  "cancel": "Cancel",
  "confirm": "Confirm",
  "delete": "Delete",
  "done": "Done",
  "dark": "Dark",
  "save": "Save",
  "light": "Light",
  "retailer": {
    "info": "Info",
    "creditCards": "Credit cards",
    "transactions": "Transactions",
    "email": "Email",
    "phone": "Phone",
    "address": "Address",
    "joinDate": "Join date",
    "detailsTitle": "Retailer details",
    "notFound": "No retailers found",
    "search": "Search for retailer",
    "pressToSearch": "Press to search retailer"
  },
  "transactions": {
    "active": "Active",
    "finished": "Finished",
    "title": "Transactions",
    "rejected": "Rejected",
    "pending": "Pending",
    "filterTitle": "Filter transactions",
    "clearFilter": "clear",
    "startDate": "Start date",
    "from": "From",
    "to": "To",
    "retailers": "Retailers",
    "applyFilter": "Apply filter",
    "markAsFinished": "Mark as finished"
  },
  "creditCard": {
    "cardNumber": "Card number",
    "expiration": "Expiration",
    "cv2": "CV2",
    "acceptRegulations1": "I accept",
    "acceptRegulations2": "regulations",
    "saveCreditCard": "Save credit card",
    "3dsTitle": "Sample 3DS View. Click continue to add card",
    "continue": "continue",
    "creditCardInitTitle": "Adding credit card",
    "waitingForCreditCardConfirm": "A check of card is in progress. Please wait",
    "cardAdded": "Credit card has been added",
    "cardAddFailure": "Unfortunately it was not possible to add a credit card",
    "deleteTitle": "Deleting credit card",
    "deleteQuestion": "Are you sure you want to delete credit card?",
    "addTitle": "Add credit card"
  }
}
