...
import {EmptyView, ErrorView} from '~/components';
import {useTranslation} from 'react-i18next';
import React from 'react';
import {getRetailerCreditCardsThunk} from '~/Retailer/store';
import {CreditCardItem} from './credit.card.item';

export const CreditCardsTab = memo(() => {
  const styles = useStylesheet(
    ({colors, spacing}) => ({
      scroll: {
        flex: 1,
        backgroundColor: colors.background,
      },
...
