...
import {useSafeAreaInsets} from 'react-native-safe-area-context';
import {
  RETAILER_SEARCH_BAR_MARGIN,
  RETAILER_SEARCH_BAR_HEIGHT,
} from './constants';

export const RetailerSearchContent = memo(
  ({onRetailerPressed}: {onRetailerPressed: (id: number) => void}) => {
    const {top} = useSafeAreaInsets();

    const styles = useStylesheet(
      ({spacing}) => ({
        list: {
...
